# xequation

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  framework.plantuml  main.cc  python_env.py  requirements.txt  test.plantuml  test.py  test_ast.py  test_b.py  test_builtins.py  test_restricted.py  vcpkg-configuration.json  vcpkg.json
demo/: CMakeLists.txt  demo_widget.cc  demo_widget.h  main.cc  message_widget.cc  message_widget.h  mock_equation_group_list_widget.cc  mock_equation_group_list_widget.h  mock_equation_list_widget.cc  mock_equation_list_widget.h  text_editor_dialog.cc  text_editor_dialog.h
gui/: CMakeLists.txt  equation_browser_widget.cc  equation_browser_widget.h  equation_completion_model.cc  equation_debugger_browser.cc  equation_debugger_browser.h  equation_dependency_graph_viewer.cc  equation_dependency_graph_viewer.h  equation_editor.cc  equation_editor.h  equation_group_editor.cc  equation_group_editor.h  equation_insert_editor.cc  equation_insert_editor.h  equation_manager_tasks.cc  equation_manager_tasks.h  equation_manager_widget.cc  equation_manager_widget.h  equation_property_manager.cc  equation_property_manager.h  equation_signals_qt_utils.h  expression_watch_widget.cc  expression_watch_widget.h  python_qt_wrapper.h  variable_inspect_widget.cc  variable_inspect_widget.h  variable_property_browser.cc  variable_property_browser.h
gui/code_editor/: code_completer.cc  code_completer.h  code_editor.cc  code_editor.h  code_highlighter.cc  code_highlighter.h  completer_delegate.cc  completer_delegate.h  completer_line_edit.cc  completer_line_edit.h  completion_list_model.cc  completion_list_model.h  equation_completer.cc  equation_completer.h  equation_group_editor.cc  equation_group_editor.h  equation_highlighter.cc  equation_highlighter.h  equation_language_model.cc  equation_language_model.h  language_model.cc  language_model.h  python_equation_highlighter.cc  python_equation_highlighter.h  python_highlighter.cc  python_highlighter.h
gui/debugger/: variable_manager.cc  variable_manager.h  variable_model.cc  variable_model.h  variable_view.cc
gui/python/: basic_python_converter.cc  python_object_inspector.h  python_qt_wrapper.h
gui/task/: task.cc  task.h  task_manager.cc
gui/toast/: toast_progress_bar.cc  toast_progress_bar.h
gui/toast_progress_bar/: PopupProgressBar.cpp  PopupProgressBar.h  ProgressManager.cpp  ProgressManager.h  main.cc  toast_progress_bar.h
gui/value_model_view/: python_item_builder.cc  python_item_builder.h  value_item.cc  value_item.h  value_item_builder.cc  value_item_builder.h  value_model.h  value_tree_model.cc  value_tree_model.h  value_tree_view.cc  value_tree_view.h
src/core/: CMakeLists.txt  dependency_graph.cc  dependency_graph.h  equation.cc  equation_common.h  equation_context.h  equation_engine.h  equation_group.cc  equation_group.h  equation_manager.cc  equation_manager.h  equation_signals_manager.h  type_traits_ext.h  value.cc  value.h  value_string_converter.h
src/gui/: CMakeLists.txt  equation_browser_widget.cc  equation_browser_widget.h  equation_code_editor.cc  equation_code_editor.h  equation_completion_model.cc  equation_completion_model.h  equation_editor.cc  equation_editor.h  equation_group_editor.cc  equation_group_editor.h  equation_manager_config_widget.cc  equation_manager_config_widget.h  equation_manager_tasks.cc  equation_manager_tasks.h  equation_signals_qt_utils.h  expression_watch_widget.cc  expression_watch_widget.h  variable_inspect_widget.cc  variable_inspect_widget.h
src/python/: CMakeLists.txt  bin2c.py  python_common.h  python_equation_context.cc  python_equation_context.h  python_equation_engine.cc  python_equation_engine.h  python_executor.cc  python_executor.h  python_parser.cc  python_parser.h  python_parser.py  python_parser_embed.h  value_pybind_converter.h
tests/: CMakeLists.txt  dependency_graph_test.cc  equation_manager_test.cc  equation_signals_manager_test.cc  expr_context_test.cc  exprvalue_test.cc  py_code_executor_test.cc  py_code_parser_test.cc  py_expr_engine_test.cc  py_parser_test.cc  py_symbol_extractor_test.cc  pybind_cast_test.cc  python_equation_engine_test.cc  python_executor_test.cc  python_parser_test.cc  value_test.cc  variable_manager_test.cc
xequation/: CMakeLists.txt
xequation/core/: bitmask.hpp  dependency_graph.cc  dependency_graph.h  equation.cc  equation.h  equation_common.h  equation_context.h  equation_engine.h  equation_group.cc  equation_group.h  equation_manager.cc  equation_manager.h  equation_signals_manager.h  event_stamp.cc  event_stamp.h  expr_common.h  expr_context.h  expr_engine.h  type_traits_ext.h  value.cc  value.h  value_string_converter.h
xequation/python/: py_base.h  py_code_executor.cc  py_code_executor.h  py_code_parser.cc  py_code_parser.h  py_expr_context.cc  py_expr_context.h  py_expr_engine.cc  py_expr_engine.h  python_base.h  python_common.h  python_equation_context.cc  python_equation_context.h  python_equation_engine.cc  python_equation_engine.h  python_executor.cc  python_executor.h  python_parser.cc  python_parser.h  python_parser_embed.h  value_pybind_converter.cc  value_pybind_converter.h
xexprengine/: CMakeLists.txt  dependency_graph.cc  dependency_graph.h  event_stamp.cc  event_stamp.h  event_stamp_generator.cc  event_stamp_generator.h  expr_common.h  expr_context.cc  expr_context.h  expr_engine.cc  expr_engine.h  expression.cc  exprvalue.cc  exprvalue.h  value.cc  value.h  value.hpp  value_convert.h  value_helper.hpp  variable.cc  variable.h  variable_dependency_graph.cc  variable_dependency_graph.h  variable_factory.cc  variable_factory.h
xexprengine/core/: dependency_graph.cc  dependency_graph.h  event_stamp.cc  event_stamp.h  expr_common.h  expr_context.cc  expr_context.h  expr_engine.h  value.cc  value.h  value_convert.h  variable.cc  variable.h  variable_manager.cc  variable_manager.h
xexprengine/python/: py_base.h  py_common.h  py_expr_context.cc  py_expr_engine.cc  py_expr_engine.h  py_restricted_evaluator.cc  py_symbol_extractor.cc  py_symbol_extractor.h  pyexprcontext.cc  (+4 more)
(+55 files in other folders)
